JOORSAND/src/objects/rh2__PS_Export_Rollups__c.object
<CustomObject>
    <description>Used for staging rollup helper metadata for export and import.</description>
    <fields>
        <fullName>rh2__RollupOrFilterData__c</fullName>
        <label>Rollup Or Filter Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__filterJobRollupKey__c</fullName>
        <externalId>true</externalId>
        <label>Filter Job Rollup Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__type__c</fullName>
        <description>type is either a rollup custom setting or a filter</description>
        <label>type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Rollup Export</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>PS_Export_Rollups ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>